--- a/src/Routes/Home/Home.module.css
+++ b/src/Routes/Home/Home.module.css
@@ -10,12 +10,12 @@
 
 .download::before {
   content: "";
-  background-image: url("../Assets/download.png");
+  background-image: url("../../Assets/download.png");
   width: 15px;
   height: 15px;
   display: inline-block;
   vertical-align: middle;
-  margin-right: 5px; 
+  margin-right: 10px; 
   background-repeat: no-repeat;
 }
 
