--- a/src/Routes/Experiences/Experience.module.css
+++ b/src/Routes/Experiences/Experience.module.css
@@ -5,7 +5,7 @@
   padding: 25px;
   max-width: 600px;
   margin: 0px auto;
-  transition: max-height 0.5s ease;
+  transition: max-height 0.5s ease-in-out;
   box-sizing: border-box;
 }
 
