--- a/src/Routes/Experiences/Experience.module.css
+++ b/src/Routes/Experiences/Experience.module.css
@@ -13,10 +13,6 @@
   margin-top: 30px;
 }
 
-.experience.expanded {
-  max-height: 100%;
-}
-
 .detalhes {
   display: flex;
   justify-content: space-between;
@@ -45,16 +41,16 @@
   border-radius: 5px;
 }
 
-.descricao.show {
-  opacity: 1;
-  max-height: 100%;
-}
-
 .descricao {
   opacity: 0;
   max-height: 0;
   overflow: hidden;
-  transition: opacity 0.5s ease, max-height 0.5s ease; 
+  transition: opacity 0.5s ease, max-height 0.5s ease;
+}
+
+.descricao.show {
+  opacity: 1;
+  max-height: 1000px; 
 }
 
 .descricao p {
