--- a/src/App.module.css
+++ b/src/App.module.css
@@ -78,22 +78,23 @@ ul {
   font-family: 'Font3';
 }
 
-.titulo {
-  background: var(--color-3);
-  max-width: 400px;
-  max-height: 125px;
+.titulo h1{
+  font-family: 'Font1';
+  font-size: 3rem; /* 18px */
+  color: var(--color-5);
+  text-align: center;
   display: flex;
   align-items: center;
-  justify-content: space-around;
-  box-shadow: inset 0 25px var(--color-1), inset 0 -25px var(--color-1);
-  border-radius: 0px 20px 20px 0px;
-  margin: 60px 0px;
+  justify-content: center;
+  margin: 30px auto 15px auto;
+  text-transform: uppercase;
+  letter-spacing: 1px;
 }
 
+
 @media (max-width: 1000px) {
-  .titulo {
-    max-width: 300px;
-    max-height: 100px;
+  .titulo h1{
+    font-size: 2rem;
   }
   
   .icons {
@@ -102,13 +103,6 @@ ul {
 }
 
 @media (max-width: 550px) {
-  .titulo {
-    max-width: 250px;
-    box-shadow: inset 0 20px var(--color-1), inset 0 -20px var(--color-1);
-    border-radius: 0px 10px 10px 0px;
-    margin: 30px 0px;
-  }
-
   .icons {
     max-width: 75px;
     max-height: 75px;
