--- a/src/Routes/Certificates/Certificates.module.css
+++ b/src/Routes/Certificates/Certificates.module.css
@@ -10,13 +10,41 @@
 }
 
 .certificados h1 {
-  text-align: center;
-  margin-bottom: 30px;
-  color: var(--color-4);
+  font-size: 1rem;
+  font-weight: bold;
+  color: var(--color-2);
+  padding-bottom: 15px;
 }
 
+.certificados h1 {
+  text-align: center;
+  position: relative;
+  display: flex;
+  max-width: 1200px;
+  margin: 0 auto;
+  white-space: nowrap;
+  align-items: center;
+}
+
+.certificados h1::before,
+.certificados h1::after {
+  content: '';
+  width: 50%;
+  height: 1px;
+  background-color: #444;
+}
+
+.certificados h1::before {
+  margin-right: 10px; /* Distância entre a linha e o texto */
+}
+
+.certificados h1::after {
+  margin-left: 10px; /* Distância entre a linha e o texto */
+}
+
+
 .separacao {
-  margin-top: 120px;
+  padding-top: 60px;
 }
 
 .certificados p {
@@ -32,11 +60,6 @@
     max-width: 550px;
   }
 
-  .certificados h1 {
-    max-width: 280px;
-    margin: 30px auto;
-  }
-
   .certificados ul {
     grid-template-columns: 1fr;
     max-width: 900px;
@@ -50,12 +73,6 @@
 }
 
 @media (max-width: 550px) {
-  .titulo {
-    max-width: 250px;
-    box-shadow: inset 0 20px var(--color-1), inset 0 -20px var(--color-1);
-    border-radius: 0px 10px 10px 0px;
-    margin: 30px 0px;
-  }
 
   .certificados {
     max-width: 350px;
