atualizacao do header

--- a/src/Components/Header/Header.module.css
+++ b/src/Components/Header/Header.module.css
@@ -24,6 +24,10 @@
   color: var(--color-4);
 }
 
+.active {
+  color: var(--color-4);
+}
+
 @media (max-width: 750px) {
   .bgHeader .button {
     display: none;
