--- a/src/Routes/Portfolio/Portfolio.module.css
+++ b/src/Routes/Portfolio/Portfolio.module.css
@@ -61,8 +61,8 @@
   color: var(--color-2);
   padding: 15px 20px;
   display: grid;
-  grid-template-columns: 1.5fr 1fr;
-  align-items: center;
+  grid-template-columns: 2fr 1fr;
+  align-items: end;
   border-radius: 0 0 10px 10px;
   opacity: 0;
   max-height: 0;
