--- a/src/Styles/RedesSociais.module.css
+++ b/src/Styles/RedesSociais.module.css
@@ -19,6 +19,10 @@
   gap: 20px;
 }
 
+.socialSvg {
+  font-size: 20px;
+}
+
 /* Contêiner de ícones sociais */
 .socialContainer {
   width: var(--social-container-size);
