--- a/src/Routes/Home/Home.module.css
+++ b/src/Routes/Home/Home.module.css
@@ -1,64 +1,63 @@
-.intro {
+.introContainer {
   display: flex;
   flex-wrap: wrap;
   align-items: center;
-  align-self: center;
   justify-content: center;
   gap: 60px;
   margin-top: 120px;
 }
 
-.download {
+.downloadButton {
   display: flex;
   align-items: center;
   gap: 8px;
 }
 
-.icon {
+.iconStyle {
   font-size: 20px;
 }
 
-.eu {
+.introText {
   color: var(--color-2);
   font-family: 'Font4';
 }
 
-.bgDados {
+.statsBackground {
   max-width: 980px;
   margin: 0 auto;
   padding-top: 120px;
   justify-content: center;
 }
 
-.bgDados h1{
+.statsBackground h1 {
   text-align: center;
   color: var(--color-2);
   margin-bottom: 30px;
 }
 
-.dados {
+.statsContainer {
   display: flex;
   justify-content: space-between;
   text-align: center;
 }
 
-.dados p{
+.statsContainer p {
   display: flex;
   flex-direction: column;
   font-size: 1.125rem;
   color: var(--color-2);
 }
 
-.dados span + span{
+.statsContainer span + span {
   color: var(--color-2);
 }
 
-.tamanho {
+.statsNumber {
   font-size: 3.5rem;
   font-family: Font3;
 }
 
-@keyframes pisca {
+@keyframes blink {
   0%, 100% {
     opacity: 1;
   }
@@ -67,108 +66,108 @@
   }
 }
 
-.eu h1 {
+.introText h1 {
   max-width: 500px;
   font-size: 2rem;
 }
 
-.eu p {
+.introText p {
   margin-top: 15px;
   max-width: 550px;
   font-size: 1rem;
 }
 
-.social {
+.socialLinks {
   display: flex;
   flex-wrap: wrap;
   align-items: center;
 }
 
-.socialButton{
+.socialLinkButton {
   max-width: 100%;
   height: 50px;
   font-size: 0.875rem;
 }
 
 @media (max-width: 1000px) {
-  .intro {
+  .introContainer {
     margin-top: 60px;
   }
 
-  .eu h1 { 
+  .introText h1 { 
     font-size: 1.5rem;
   }
 
-  .foto {
+  .profileImage {
     max-width: 300px;
   }
     
-  .bgDados {
+  .statsBackground {
     max-width: 700px;
     padding-top: 60px;
   }
 
-  .dados p {
+  .statsContainer p {
     font-size: 1rem;
   }
 
-  .tamanho {
+  .statsNumber {
     font-size: 2rem;
   }
 }
 
 @media (max-width: 850px) {
-  .foto {
+  .profileImage {
     max-width: 200px;
     max-height: 200px;
   }
 
-  .intro {
+  .introContainer {
     gap: 0px;
     margin-top: 100px;
   }
 
-  .bgDados {
+  .statsBackground {
     text-align: center;
   }
 
-  .dados {
+  .statsContainer {
     display: block;
   }
 
-  .dados p + p{
+  .statsContainer p + p {
     margin-top: 15px;
   }
 }
 
 @media (max-width: 700px) {
-  .intro {
+  .introContainer {
     gap: 20px;
     margin-top: 30px;
   }
 
-  .eu h1 {
+  .introText h1 {
     max-width: 300px;
     margin: 0 auto;
   }
   
-  .eu p {
+  .introText p {
     max-width: 300px;
     font-size: 1rem;
     margin: 15px auto 0 auto;
   }
 
-  .social {
+  .socialLinks {
     max-width: 320px;
   }
 
-  .social .socialButton {
+  .socialLinkButton {
     order: 2;
   }
 }
 
 @media (max-width: 550px) {
-  .eu {
+  .introText {
     order: 2;
   }
 }
