--- a/src/Routes/Portfolio/Portfolio.module.css
+++ b/src/Routes/Portfolio/Portfolio.module.css
@@ -61,7 +61,7 @@
   color: var(--color-2);
   padding: 15px 20px;
   display: grid;
-  grid-template-columns: 2fr 1fr;
+  grid-template-columns: 2.5fr 1fr;
   align-items: end;
   border-radius: 0 0 10px 10px;
   opacity: 0;
@@ -85,7 +85,7 @@
   color: #fff;
   border: none;
   padding: 8px 16px;
-  border-radius: 10px;
+  border-radius: 5px;
   font-weight: bold;
   cursor: pointer;
   transition: background-color 0.3s;
@@ -98,35 +98,29 @@
 }
 
 .sectionTitle {
-  text-align: center;
   position: relative;
-  display: flex;
+  display: block;
   max-width: 1200px;
   margin: 0 auto;
   white-space: nowrap;
   align-items: center;
+  padding: 20px;
 }
 
 .sectionTitle h2 {
-  font-size: 0.875rem;
+  font-size: 1.125rem;
   font-weight: bold;
   color: var(--color-2);
 }
 
-.sectionTitle::before,
 .sectionTitle::after {
+  position: absolute;
   content: '';
-  width: 50%;
-  height: 1px;
-  background-color: #444;
-}
-
-.sectionTitle::before {
-  margin-right: 10px;
-}
-
-.sectionTitle::after {
-  margin-left: 10px;
+  width: 150px;
+  height: 2px;
+  margin-top: 3px;
+  background-color: var(--color-4);
+  border-radius: 20px;
 }
 
 @media (max-width: 1024px) {
