--- a/src/Components/Button/Button.module.css
+++ b/src/Components/Button/Button.module.css
@@ -3,7 +3,7 @@
   padding: 12px 22px;
   border-radius: 6px;
   border: none;
-  color: #fff;
+  color: var(--color-7);
   cursor: pointer;
   background-color: #7d2ae8;
   transition: all 0.2s ease;
