--- a/src/Components/Detalhes/Detalhes.module.css
+++ b/src/Components/Detalhes/Detalhes.module.css
@@ -3,14 +3,14 @@
   grid-template-columns: 1fr 1fr 1fr;
   text-align: center;
   justify-items: center;
-  max-width: 1020px;
+  max-width: 1200px;
   margin: 120px auto 0 auto;
 }
 
 .curriculo {
   color: #fff;
-  width: 300px;
-  height: 520px;
+  width: 320px;
+  height: 460px;
   border-radius: 20px;
   border: 1px solid var(--color-4);
   padding: 30px auto;
@@ -24,9 +24,9 @@
 
 .curriculo p {
   display: flex;
-  max-width: 200px;
+  max-width: 250px;
   justify-content: center;
-  margin: 15px auto 0px auto;
+  margin: 15px auto 0;
   color: var(--color-2);
 }
 
@@ -40,10 +40,11 @@
   width: 150px;
   height: 50px;
   font-size: 1rem;
+  margin-bottom: 30px;
 }
 
 .iconsCurriculo {
-  margin: 30px 0px;
+  margin: 30px 0;
   display: flex;
   justify-content: center;
 }
@@ -56,13 +57,15 @@
   margin-left: 30px;
 }
 
-.curriculo button {
-  margin-bottom: 30px;
-}
-
-@media (max-width: 1000px) {
+/* Responsivo: tablets (até 1024px) */
+@media (max-width: 1024px) {
   .curriculo {
     width: 250px;
+    height: 520px;
+  }
+
+  .curriculo p {
+    max-width: 200px;
   }
 
   .detalhes {
@@ -74,9 +77,15 @@
   }
 }
 
-@media (max-width: 850px) {
+/* Responsivo: tablets pequenos / mobile grandes (até 768px) */
+@media (max-width: 768px) {
   .curriculo {
-    width: 300px;
+    width: 320px;
+    height: 460px;
+  }
+
+  .curriculo p {
+    max-width: 250px;
   }
 
   .carreira {
@@ -90,5 +99,23 @@
 
   .detalhes {
     left: 25%;
+  }
+}
+
+/* Responsivo: celulares (até 480px) */
+@media (max-width: 480px) {
+  .curriculo {
+    width: 100%;
+    max-width: 320px;
+    margin: 0 auto;
+  }
+
+  .curriculo p {
+    max-width: 100%;
+    padding: 0 10px;
+  }
+
+  .detalhes {
+    left: 20%;
   }
 }
