--- a/src/Components/Header/MenuMobile.module.css
+++ b/src/Components/Header/MenuMobile.module.css
@@ -15,7 +15,7 @@
 
 .menuHamburguer {
   display: flex;
-  padding: 0.2rem 0rem;
+  padding: 0.2rem 0;
   border: none;
   background: none;
 }
@@ -27,75 +27,75 @@
   background: var(--color-4);
 }
 
-.menuHamburguerFechado::before {
-  content: '';
-  display: block;
-  width: 20px;
-  height: 2px;
-  background: var(--color-4);
-  margin-top: 7px;
-  transition: 0.3s;
-  position: relative;
-}
-
+.menuHamburguerFechado::before,
 .menuHamburguerFechado::after {
   content: '';
   display: block;
   width: 20px;
   height: 2px;
   background: var(--color-4);
-  margin-top: 5px;
-  transition: 0.3s;
   position: relative;
+  transition: 0.3s;
+}
+
+.menuHamburguerFechado::before {
+  margin-top: 7px;
+}
+
+.menuHamburguerFechado::after {
+  margin-top: 5px;
+}
+
+.menuHamburguerAberto {
+  border-top: none;
+  background: none;
+}
+
+.menuHamburguerAberto::before {
+  transform: rotate(135deg);
+}
+
+.menuHamburguerAberto::after {
+  transform: rotate(-135deg);
+  top: -7px;
+}
+
+/* Responsivo: tablets / celulares */
+@media (max-width: 768px) {
+  .hamburger {
+    display: block;
   }
 
-  .menuHamburguerAberto {
-    border-top: none;
-    background: none;
-  }
-  .menuHamburguerAberto::before {
-    transform: rotate(135deg);
-  }
-  .menuHamburguerAberto::after {
-    transform: rotate(-135deg);
-    top: -7px;
-  }
-
-@media (max-width: 750px) {
   .menuFechado {
     display: flex;
     flex-direction: column;
     position: absolute;
-    background: var(--color-1);
-    width: 100%;
     top: 120px;
-    right: 0px;
-    transition: 0.6s;
-    height: 0px;
+    right: 0;
+    width: 100%;
+    height: 0;
+    background: var(--color-1);
     visibility: hidden;
     overflow-y: hidden;
+    transition: 0.6s;
     z-index: 1;
   }
 
   .menuAberto {
-    height: 40px;
+    height: 80px;
+    background: var(--color-1);
     visibility: visible;
     overflow-y: hidden;
-    background: var(--color-1);
-  }
-
-  .hamburger {
-    display: block;
   }
 }
 
-@media (max-width: 700px) {
+/* Ajuste adicional para telas menores */
+@media (max-width: 480px) {
   .menuFechado {
     top: 100px;
   }
 
   .menuAberto {
-    height: 170px;
-    background: var(--color-1)
+    height: 120px;
   }
 }
