--- a/src/Routes/Certificates/Certificates.module.css
+++ b/src/Routes/Certificates/Certificates.module.css
@@ -1,50 +1,38 @@
 .certificados img {
   max-width: 700px;
-  margin: 0px auto;
+  margin: 0 auto;
+  display: block;
 }
 
 .certificados {
   color: var(--color-2);
-  max-width: 800px;
-  margin: 0px auto;
+  max-width: 1000px; /* Ajuste para melhor responsividade */
+  margin: 0 auto;
+  padding: 20px;
 }
 
-.certificados h1 {
-  font-size: 1rem;
-  font-weight: bold;
-  color: var(--color-2);
-  padding-bottom: 15px;
-}
-
-.certificados h1 {
-  text-align: center;
-  position: relative;
-  display: flex;
+.certificadoTitle {
+  display: block;
   max-width: 1200px;
   margin: 0 auto;
   white-space: nowrap;
   align-items: center;
+  padding: 20px;
 }
 
-.certificados h1::before,
-.certificados h1::after {
+.certificadoTitle h1 {
+  font-size: 1.125rem;
+  color: var(--color-7);
+}
+
+.certificadoTitle::after {
+  position: absolute;
   content: '';
-  width: 50%;
-  height: 1px;
-  background-color: #444;
-}
-
-.certificados h1::before {
-  margin-right: 10px; /* Distância entre a linha e o texto */
-}
-
-.certificados h1::after {
-  margin-left: 10px; /* Distância entre a linha e o texto */
-}
-
-
-.separacao {
-  padding-top: 60px;
+  width: 120px;
+  height: 2px;
+  margin-top: 3px;
+  background-color: var(--color-4);
+  border-radius: 20px;
 }
 
 .certificados p {
@@ -55,30 +43,34 @@
   margin-top: 15px;
 }
 
-@media (max-width: 1000px) {
+/* TABLET E CELULAR */
+@media (max-width: 768px) {
   .certificados {
-    max-width: 550px;
-  }
-
-  .certificados ul {
-    grid-template-columns: 1fr;
-    max-width: 900px;
-    gap: 30px;
-    color: var(--color-5);
+    max-width: 600px;
+    padding: 15px;
   }
 
   .certificados img {
-    max-width: 450px;
+    max-width: 100%;
+  }
+
+  .certificadoTitle {
+    font-size: 1rem; /* Ajustando o tamanho da fonte para telas menores */
   }
 }
 
-@media (max-width: 550px) {
-
+/* CELULARES PEQUENOS */
+@media (max-width: 480px) {
   .certificados {
     max-width: 350px;
+    padding: 10px;
   }
 
   .certificados img {
-    max-width: 250px;
+    max-width: 100%;
+  }
+
+  .certificadoTitle {
+    font-size: 0.9rem; /* Ajustando o tamanho da fonte para telas ainda menores */
   }
 }
