--- a/src/Routes/Certificates/Certificates.module.css
+++ b/src/Routes/Certificates/Certificates.module.css
@@ -35,6 +35,10 @@
   border-radius: 20px;
 }
 
+.certificados img {
+  max-width: 95%;
+}
+
 .certificados p {
   display: flex;
   text-align: center;
