--- a/src/Styles/RedesSociais.module.css
+++ b/src/Styles/RedesSociais.module.css
@@ -111,7 +111,7 @@
 /* Responsividade para telas menores */
 @media (max-width: 768px) {
   .card {
-    padding: 30px 0;
+    padding: 0;
     max-width: 300px;
   }
 
